# drink-list

./: .env.example  Cargo.toml  copy-todo.js  diesel.toml  docker-compose.yml
migrations/2019-10-21-203410_inital_drink_tables/: down.sql  up.sql
src/: db.rs  error.rs  import.rs  lib.rs  main.rs  models.rs  reports.rs  schema.patch  schema.rs
src/api/: mod.rs  util.rs
