[package]
name = "drink-list"
version = "0.1.0"
authors = ["Marcus Ball <marcus.ball@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4"
uom = { version = "0.25.0", features = ["f32", "f64", "use_serde", "si", "std"] }
serde = "1.0.101"
diesel = { version = "1.4.3", features = ["postgres","extras","chrono"] }
dotenv = "0.15"