[package]
name = "drink-list"
version = "0.1.0"
authors = ["Marcus Ball <marcus.ball@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
uom = { version = "0.26.0", features = ["f32", "f64", "use_serde", "si", "std"] }
serde = { version = "1.0.102", features = ["derive"] }
diesel = { version = "1.4.3", features = ["postgres","extras","chrono"] }
dotenv = "0.15"
actix-rt = "1.0.0-alpha.1"
actix-web = "2.0.0-alpha.1"
actix-cors = "0.2.0-alpha.1"
env_logger = "0.7"
futures = "0.3.1"
serde_json = "1.0.41"
log = "0.4.8"
derive_more = "0.99.2"